<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardBackgroundColor="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/commentCardView"
    android:layout_marginBottom="-2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/username"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/date_format" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/displayedCommentEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="14sp"
            android:background="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/likeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_thumb_up_off_alt_24"
                android:contentDescription="@string/like"/>

            <TextView
                android:id="@+id/likesCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/likes_counter"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/likes_count"/>

            <ImageView
                android:id="@+id/replyImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:srcCompat="@drawable/baseline_reply_24"
                android:contentDescription="@string/reply_to_user"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>