<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgColor"
            app:elevation="-10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/upBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="?attr/homeAsUpIndicator" />


            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@drawable/login_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:text="@string/welcome_to_zeroxpire"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:layout_marginTop="5dp"
            android:text="@string/login_to_unlock_a_world_of_personalized_experiences_and_exclusive_content"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:layout_marginTop="40dp"
            android:hint="@string/email"

            app:hintTextAppearance="@style/HintTextStyle"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"

            app:hintTextAppearance="@style/HintTextStyle"
            app:startIconDrawable="@drawable/baseline_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_logged_in" />

            <TextView
                android:id="@+id/forgotPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:text="@string/forgot_password" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/btnColor"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
  
            android:layout_marginTop="10dp"
            android:text="@string/or" />

        <Button
            android:id="@+id/loginWithGoogleBtn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
  
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/login_with_google"
            app:icon="@drawable/icons_google"
            app:iconPadding="12dp" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"/>

            <TextView
                android:id="@+id/createAccBtn"
                android:textColor="@color/btnColor"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_now"/>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>