<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/instructionFrameLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/addInstructionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_add_24"
        android:contentDescription="@string/add_instructions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instructionTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/step_hint"
        android:layout_weight="1"
        app:hintTextAppearance="@style/HintTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instructionTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/dragInstructionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_drag_handle_24"
        android:contentDescription="@string/drag" />

</LinearLayout>