<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createRecipe.CreateRecipe" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/bgColor"
        app:elevation="-10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/createRecipeUpBtnImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start|center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="?attr/homeAsUpIndicator" />

                <ImageView
                    android:id="@+id/createRecipeImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center"
                    android:contentDescription="@string/create_recipe"
                    android:src="@drawable/baseline_save_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/create_recipe_top_bar"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipeImgImageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/recipe_image"
                android:maxHeight="200dp"
                android:src="@drawable/baseline_add_photo_alternate_24" />

            <EditText
                android:id="@+id/recipeTitleEditText"
                style="@style/RecipeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/recipe_title_hint"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:maxWidth="400dp"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/ingredientsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ingredientsBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ingredientsTextView"
                        style="@style/RecipeSubtopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredientsSubtopic" />

                    <ImageView
                        android:id="@+id/addIngredientImageView"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/add_ingredients"
                        android:padding="5dp"
                        android:src="@drawable/baseline_add_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/instructionsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/instructionsBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/instructionsTextView"
                        style="@style/RecipeSubtopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructionsSubtopic" />

                    <ImageView
                        android:id="@+id/addInstructionImageView"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/add_instructions"
                        android:padding="5dp"
                        android:src="@drawable/baseline_add_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noteLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notesTextView"
                    style="@style/RecipeSubtopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />

                <EditText
                    android:id="@+id/recipeNoteEditText"
                    style="@style/RecipeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/type_note_here"
                    android:importantForAutofill="no"
                    android:inputType="textLongMessage|textMultiLine"
                    android:maxWidth="400dp"
                    android:minWidth="200dp"
                    android:minHeight="48dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>