<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookmarksRecyclerViewConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:barrierMargin="0dp">

    <ImageView
        android:id="@+id/bookmarkImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/recipe_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_image_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bookmarkConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookmarkImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bookmarkTitleTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="@integer/material_motion_duration_long_1"
            android:text="@string/recipe_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookmarkIngredientsTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recipe_ingredients_list"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookmarkTitleTextview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>